--- a/examples/ex_03_beam_collection.ipynb
+++ b/examples/ex_03_beam_collection.ipynb
@@ -5,17 +5,11 @@
    "id": "0e2fbbf6",
    "metadata": {},
    "source": [
-    "# Example 3 — Synthetic beam collections: stats & merge\n",
+    "# Example 3: Synthetic beam collections: stats & merge\n",
     "\n",
-    "**Goal.** Generate a collection of *artificial* beams with controllable properties:\n",
-    "- Astigmatic focus: horizontal focus at **−0.1 m**, vertical focus at **+0.1 m**\n",
-    "- Small random variability (~±10%) in all key parameters per run\n",
-    "- Slight **skewness**/**kurtosis** in spatial profiles (mixture-of-Gaussians)\n",
-    "- Per-ray **intensity** around **1/√2** with variability\n",
-    "\n",
-    "Then we:\n",
-    "- compute **statistics** for each run and for the whole collection,\n",
-    "- **merge** all runs into a single standardized beam and compute stats again.\n"
+    "**Goal.** Generate a collection of *artificial* beams for:\n",
+    "- computing **statistics** for each run and for the whole collection,\n",
+    "- **merging** all runs into a single standardized beam and compute stats again.\n"
    ]
   },
   {
@@ -40,10 +34,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "519061e9",
+   "id": "c260ab8d",
    "metadata": {},
    "source": [
-    "## 0) User parameters"
+    "## 1) Synthetic beam generator"
    ]
   },
   {
@@ -54,7 +48,7 @@
    "outputs": [],
    "source": [
     "N_RUNS   = 50          # number of synthetic beams\n",
-    "N_RAYS   = 1000       # rays per beam\n",
+    "N_RAYS   = 1000        # rays per beam\n",
     "SEED     = 42          # base RNG seed\n",
     "E0       = 720         # central photon energy (eV)\n",
     "VAR_PCT  = 0.10        # ~±10% variability (1σ) for parameters\n",
@@ -70,21 +64,6 @@
     "# Target focal distances (sign = where the waist lies relative to z0)\n",
     "F_X0     = -0.1        # m (focus upstream)\n",
     "F_Y0     = +0.1        # m (focus downstream)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c260ab8d",
-   "metadata": {},
-   "source": [
-    "## 1) Synthetic beam generator\n",
-    "\n",
-    "We build a slightly skewed/kurtotic spatial distribution via a **two-component Gaussian mixture** (90% centered + 10% shifted by ~0.8σ).  \n",
-    "We then **impose the target focus** by correlating positions and angles:\n",
-    "\n",
-    "\\[ dX = -\\frac{1}{f_x} X + \\epsilon_x, \\qquad dY = -\\frac{1}{f_y} Y + \\epsilon_y, \\]\n",
-    "\n",
-    "with a small noise term \\(\\epsilon\\) so the LSQ focus is close to the requested value."
    ]
   },
   {
@@ -154,7 +133,7 @@
    "id": "b5ce6d3a",
    "metadata": {},
    "source": [
-    "## 2) Build a collection of beams with ~10% variability"
+    "## 2) Build a collection of beams"
    ]
   },
   {
